--- a/styling/flex-navbar/assets/style.css
+++ b/styling/flex-navbar/assets/style.css
@@ -1,5 +1,5 @@
 *{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: "Roboto", sans-serif;
 }
 
 .nav{
@@ -45,5 +45,5 @@ li:hover {
     border: 1px solid black;
     
     border-style: solid;
-    /*padding: 5px;*/
+    
 }
