--- a/styling/user-card/assets/style.css
+++ b/styling/user-card/assets/style.css
@@ -1,23 +1,27 @@
+/*reset*/
 *{
     padding: 0px;
     margin: 0px;
 }
+
 main{
     font-family: Varela Round;
     display: flex;
     justify-content: center;
-    /*align-items: center;*/
     margin-top: 100px;
     
 }
+
 .container{
     border: 5px solid grey ;
 }
+
 .data{
     position: relative;
     top: -60px;
     left: 20px;
 }
+
 .top_bar{
     background-color: #17A2B8;
     border: 5px solid #17A2B8 ;
@@ -36,8 +40,6 @@ main{
     border: 2px solid #ccc; 
     background-color: aliceblue;
     
-    
-    /*background-color: red;*/
 }
 .avatar > img{
     width: 100px;
